#  workspace configuration
[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Shindan awesome team <contact@shindan.io>"]
repository = "https://github.com/shindan-io/scnr"
homepage = 'https://shindan.io/'

# https://doc.rust-lang.org/cargo/reference/workspaces.html

#  ------------------------------------------------------------------------------------------------------------------
#  ------------------------------------------------------------------------------------------------------------------
# 
#                                                 LINTS
#  
#  ------------------------------------------------------------------------------------------------------------------
#  ------------------------------------------------------------------------------------------------------------------

# Lints will work ... in the futur : https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#lints
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
missing_errors_doc = "allow"

#  ------------------------------------------------------------------------------------------------------------------
#  ------------------------------------------------------------------------------------------------------------------
# 
#                                                 WORKSPACE CRATES
#  
#  ------------------------------------------------------------------------------------------------------------------
#  ------------------------------------------------------------------------------------------------------------------


[workspace]
resolver = "2"

default-members = ["scnr"]

members = [
  "scnr",        # Scanner
  "scnr_core",   # Scanner
  "scnr_plist",  # Scanner
  "scnr_sqlite", # Scanner
]

#  ------------------------------------------------------------------------------------------------------------------
#  ------------------------------------------------------------------------------------------------------------------
# 
#                                                 DEPENDENCIES
#  
#  ------------------------------------------------------------------------------------------------------------------
#  ------------------------------------------------------------------------------------------------------------------

[workspace.dependencies]
# Misc
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
thiserror = "1.0"
anyhow = "1.0"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "parsing"] }
base64 = "0.21"
flume = "0.11"
clap = { version = "4", features = ["derive", "env"] }
strum = { version = "0.25", features = ["derive"] }
bytes = "1"

# Logging / Tracing / Metrics
pretty_env_logger = "0.5"
tracing = { version = "0.1", features = [
  # https://docs.rs/tracing/latest/tracing/#crate-feature-flags
  "log",
  # "log-always",
] }
tracing-log = "0.2"
log = "0.4"

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jaq-core = "1.0"
jaq-std = "1.0"
jaq-interpret = "1.0"
jaq-parse = "1.0"
jaq-syn = "1.0"
csv = "1.2"
plist = "1.5"

# Databases
rusqlite = { version = "0.29", features = ["bundled"] }

# File system
glob = "0.3"
globwalk = "0.8"
walkdir = "2"

# Compression
zip = "0.6"
lzma-rs = "0.3"
tar = "0.4"
flate2 = "1.0"

# Tests
insta = { version = "1.31", features = ["yaml"] }
test-case = "3.1"
pretty_assertions = "1.4"


#  ------------------------------------------------------------------------------------------------------------------
#  ------------------------------------------------------------------------------------------------------------------
# 
#                                     COMPILATION PROFILES & OPTIMISATIONS
#  
#  ------------------------------------------------------------------------------------------------------------------
#  ------------------------------------------------------------------------------------------------------------------


[profile.release]
strip = true

[profile.dev.package]
serde.opt-level = 3
serde_json.opt-level = 3
plist.opt-level = 3
