[package]
name = "py_scnr"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_scnr"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
scnr = { workspace = true }
scnr_core = { workspace = true }
scnr_plist = { workspace = true }
scnr_sqlite = { workspace = true }

pretty_env_logger = { workspace = true }
pyo3 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jaq-core = { workspace = true }
