[package]
name = "scnr"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scnr_core = { path = "../scnr_core" }
scnr_plist = { path = "../scnr_plist" }
scnr_sqlite = { path = "../scnr_sqlite" }

pretty_env_logger = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
