[package]
name = "scnr"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "All in one super awesome file scanner"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "scnr"
path = "src/main.rs"

[lib]
name = "scnr"
path = "src/lib.rs"


[dependencies]
scnr_core = { workspace = true }
scnr_plist = { workspace = true }
scnr_sqlite = { workspace = true }

pretty_env_logger = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
scnr_core = { workspace = true, features = ["tests_helpers"] }
pretty_assertions = { workspace = true }
