[package]
name = "scnr_plist"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scnr_core = { path = "../scnr_core" }
tracing = { workspace = true }
serde_json = { workspace = true }

plist = { workspace = true }
