[package]
name = "scnr_sqlite"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scnr_core = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

rusqlite = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
scnr_core = { workspace = true, features = ["tests_helpers"] }
anyhow = { workspace = true }
